imagenes de animales

--- a/styles.css
+++ b/styles.css
@@ -13,5 +13,5 @@ nav.navbar {
 }
 
 .jumbotron {
-    background-image: url("img/dog_05.jpg");
+    background-image: url("assets/dog_05.jpg");
     background-size: cover;}
