Cambios en registrer

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,5 @@ nav.navbar {
 
 .jumbotron {
     background-image: url("assets/dog_05.jpg");
-    background-size: cover;}
-
-
+    background-size: cover;
+}
