--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,8 @@ nav.navbar {
 .fichaAnimal .col-sm-4 {
     margin: 2.1rem!important;
     width: 100px;
-    -ms-flex: 0 0 33%;
-    flex: 0 0 33%;
-    max-width: 32%;
+    /*-ms-flex: 0 0 33%;
+     flex: 0 0 33%;
+    max-width: 32%;*/
  
 }
