--- a/styles.css
+++ b/styles.css
@@ -20,11 +20,11 @@ nav.navbar {
 }
 
 .serchVerticalL {
-    border-right: 5px solid black;
+    border-right: 1px solid #b3d7ff;
 }
 
 .serchVerticalR {
-    border-left: 5px solid black;
+    border-left: 1px solid #b3d7ff;
 }
 
 .contCarr {
