--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,12 @@ nav.navbar {
 
 .jumbotron {
     background-image: url("assets/dog_05.jpg");
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
+    background-position: center, center;
+    background-repeat: no-repeat;
 }
 
 .serchVerticalL {
