--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
-.LogIn {
-    margin-left: 10px;
+.nav .cla{
+    margin-left: 30px;
 }
 
 /* cambiar tipo de letra */
@@ -28,7 +28,7 @@ nav.navbar ul.nav li {
     border-left: 1px solid #b3d7ff;
 }
 
-/*.colCarrusel {
+.colCarrusel {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -36,7 +36,7 @@ nav.navbar ul.nav li {
     background-position: center, center;
     background-repeat: no-repeat;
     margin:25px;
-}*/
+}
 
 .conCarrusel {
     margin-top: 50px;
@@ -45,3 +45,8 @@ nav.navbar ul.nav li {
 .colIzq {
     margin-right: 40px;
 }
+
+.LogIn{
+    margin-left: 8px;
+    text-align: right;
+  }
