--- a/styles.css
+++ b/styles.css
@@ -56,3 +56,12 @@ nav.navbar ul.nav li {
     margin-left: 8px;
     text-align: right;
 }
+
+.logo{
+    text-align: center;
+  
+    background-color:white;
+  }
+  .logo img{
+    width: 300px;
+  }
