--- a/styles.css
+++ b/styles.css
@@ -4,19 +4,24 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 
-ul {
+body h4 {
+    text-align: center;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.menuHorizontal ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: white;
+    background-color: #343a40;
 }
 
-li {
+.menuHorizontal li {
     float: left;
 }
 
-li a {
+.menuHorizontal li a {
     display: block;
     color: rgb(102, 181, 255);
     text-align: center;
@@ -25,36 +30,18 @@ li a {
     margin: 0 auto;
 }
 
-li a:hover {
-    background-color: #b4bfff;
-}
-
-
-/* cambiar tipo de letra */
-
-nav.navbar ul.nav li {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-
-/* cambiar el color de fondo a la barra */
-
-.jumbotron {
-    /* background-image: url("assets/fondo.jpeg"); */
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    background-position: center, center;
-    background-repeat: no-repeat;
+.menuHorizontal li a:hover {
+    background-color: #172570;
 }
 
 .serchVerticalL {
-    border-right: 1px solid #b3d7ff;
+    border-right: 2px solid #b3d7ff;
+    text-align: left;
+    margin-left: 1opx;
 }
 
 .serchVerticalR {
-    border-left: 1px solid #b3d7ff;
+    border-left: 2px solid #b3d7ff;
 }
 
 .colCarrusel {
@@ -75,7 +62,18 @@ nav.navbar ul.nav li {
     margin-right: 40px;
 }
 
-.col LogIn {
-    margin-left: 28px;
+.logo {
+    text-align: center;
+    padding-top: 5px;
+    background-color: white;
+    margin: 0 auto;
+}
+
+.logo img {
+    width: 250px;
+    margin: 0 auto;
+}
+
+.LogInn {
     text-align: right;
 }
