--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body h4 {
 }
 
 .menuHorizontal li a:hover {
-    background-color: #172570;
+    background-color: rgb(24, 22, 44);
 }
 
 .serchVerticalL {
