--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ body h4 {
 .serchVerticalL {
     border-right: 2px solid #b3d7ff;
     text-align: left;
-    margin-left: 1opx;
+    margin-left: 5px;
 }
 
 .serchVerticalR {
