--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 body {
+    background-image: url("assets/Logo-02.png");
     font-family: "futura_icgregular";
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
@@ -7,6 +8,29 @@ body {
 body h4 {
     text-align: center;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+body h5 {
+    text-align: center;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: rgb(0, 111, 175);
+}
+
+body h6 {
+    font-family: Vegur, 'PT Sans', Verdana, sans-serif;
+    font-size: 14px;
+    text-align: justify;
+    text-indent: 10px;
+    line-height: 20px;
+    color: rgb(0, 50, 78);
+}
+
+.card .card-body {
+    background-color: rgb(240, 251, 255);
+    background-image: url("assets/Logo-02.png");
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-position: center;
 }
 
 .menuHorizontal ul {
