--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body h5 {
     color: rgb(0, 111, 175);
 }
 
-body h6 {
+body p {
     font-family: Vegur, 'PT Sans', Verdana, sans-serif;
     font-size: 14px;
     text-align: justify;
