--- a/styles.css
+++ b/styles.css
@@ -104,3 +104,53 @@ body p {
 .LogInn {
     text-align: right;
 }
+
+footer {
+    background-color: #fff;
+    border-top: 1px solid #ededed;
+    padding: 50px;
+    z-index: 2;
+    position: relative;
+    color: #484848;
+    text-align: center;
+}
+
+footer ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333333;
+}
+
+footer li {
+    float: left;
+}
+
+footer li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none;
+}
+
+footer li a:hover {
+    background-color: #111111;
+}
+
+footer p {
+    background-color: #fff;
+    border-top: 1px solid #ededed;
+    padding: 10px;
+    z-index: 2;
+    position: relative;
+    color: #484848;
+    text-align: center;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+footer .copyright {
+    opacity: .5;
+    line-height: 1.7;
+}
