--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("assets/Logo-02.png");
+    /* background-image: url("assets/Logo-02.png"); */
     font-family: "futura_icgregular";
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
@@ -26,8 +26,12 @@ body p {
 }
 
 .card{
-    margin-bottom: 1.5em;
+    margin-bottom: 1.5em;    
+    box-shadow:0 14px 20px 4px rgba(0, 0, 0, 0.25);
 }
+
+
+
 .card .card-body {
     background-color: rgb(240, 251, 255);
     background-image: url("assets/Logo-02.png");
