--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,34 @@
 body {
-    /* background-image: url("assets/Logo-02.png"); */
+    background-image: url("assets/Logo-02.png");
     font-family: "futura_icgregular";
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
 }
 
-body h4 {
+h1{
+    text-align: center;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: rgb(0, 111, 175);
+}
+
+h2{
+    text-align: center;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: rgb(0, 111, 175);
+}
+
+h3{
+    text-align: center;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: rgb(0, 111, 175);
+}
+
+h4 {
     text-align: center;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-body h5 {
+h5 {
     text-align: center;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: rgb(0, 111, 175);
@@ -25,12 +43,10 @@ body p {
     color: rgb(0, 50, 78);
 }
 
-.card{
-    margin-bottom: 1.5em;    
-    box-shadow:0 14px 20px 4px rgba(0, 0, 0, 0.25);
+.card {
+    margin-bottom: 1.5em;
+    box-shadow: 0 14px 20px 4px rgba(0, 0, 0, 0.85);
 }
-
-
 
 .card .card-body {
     background-color: rgb(240, 251, 255);
@@ -43,7 +59,6 @@ body p {
 .menuHorizontal ul {
     list-style-type: none;
     margin: 0;
-    padding: 0;
     overflow: hidden;
     background-color: #343a40;
 }
@@ -65,10 +80,15 @@ body p {
     background-color: rgb(24, 22, 44);
 }
 
+.rowPrincipal {
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
 .serchVerticalL {
     border-right: 2px solid #b3d7ff;
     text-align: left;
-    margin-left: 5px;
     background-color: #343a40!important;
     color: white;
 }
@@ -110,6 +130,10 @@ body p {
 
 .LogInn {
     text-align: right;
+}
+
+.formNuevoAnimal {
+    box-shadow: 0 14px 20px 4px rgba(0, 0, 0, 0.85);
 }
 
 footer {
