--- a/styles.css
+++ b/styles.css
@@ -5,19 +5,19 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 
-h1{
+h1 {
     text-align: center;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: rgb(0, 111, 175);
 }
 
-h2{
+h1 {
     text-align: center;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: rgb(0, 111, 175);
 }
 
-h3{
+h3 {
     text-align: center;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: rgb(0, 111, 175);
@@ -68,16 +68,19 @@ body p {
 }
 
 .menuHorizontal li a {
-    display: block;
-    color: rgb(102, 181, 255);
+    background-color: b3d7ff;
+    border: none;
+    color: white;
+    padding: 1px 32px;
     text-align: center;
-    padding: 16px;
-    text-decoration: none;
-    margin: 0 auto;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition: 0.7s;
 }
 
 .menuHorizontal li a:hover {
-    background-color: rgb(24, 22, 44);
+    background-color: #b3d7ff;
+    color: black;
 }
 
 .rowPrincipal {
