--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,15 @@
 body {
     background-image: url("assets/Logo-02.png");
-    font-family: "futura_icgregular";
+    background-image: no-repeat;
+    font-family: "Helvetica Neue", "Helvetica", "Arial", "sans-serif";
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
 }
 
 @media all and (max-width: 520px) {
     body {
-        background-image: none;
         background-color: white;
-        font-family: "futura_icgregular";
+        font-family: "Helvetica Neue", "Helvetica", "Arial", "sans-serif";
         text-rendering: optimizeLegibility;
         -webkit-font-smoothing: antialiased;
     }
@@ -26,8 +26,8 @@ body {
 
 @media all and (max-width: 699px) and (min-width: 520px) {
     body {
-        background-image: url("assets/gatos_familia_01.jpg");
-        font-family: "futura_icgregular";
+        background-image: url("assets/Logo-02.png");
+        font-family: "Helvetica Neue", "Helvetica", "Arial", "sans-serif";
         text-rendering: optimizeLegibility;
         -webkit-font-smoothing: antialiased;
     }
@@ -38,8 +38,8 @@ body {
 
 @media all and (min-width: 670px) {
     body {
-        background-image: url("assets/gatos_familia_01.jpg");
-        font-family: "futura_icgregular";
+        background-image: url("assets/Logo-02.png");
+        font-family: "Helvetica Neue", "Helvetica", "Arial", "sans-serif";
         text-rendering: optimizeLegibility;
         -webkit-font-smoothing: antialiased;
     }
