--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ body p {
 
 .cardAnimal {
     margin-bottom: 140px;
-    width: auto;
+    width: 100%;
     margin: auto auto;
     box-shadow: 0 14px 20px 4px rgba(0, 0, 0, 0.45);
 }
@@ -111,7 +111,7 @@ body p {
     background-position: center;
     position: absolute;
     opacity: 0.2;
-    /* width: 88%; */
+    width: 100%;
     z-index: 1;
     float: none;
 }
