--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,17 @@ body p {
     background-position: right;
 }
 
+.wish {
+    margin-right: 15%;
+    position: absolute;
+    top: 5%;
+    left: 83%;
+    background-color: rgb(240, 251, 255);
+    background-repeat: no-repeat;
+    background-position: right;
+    width: 25px;
+}
+
 .imagen {
     background-repeat: no-repeat;
     background-position: center;
