--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,45 @@
     }
 }
 
+h1 {
+    text-align: center;
+    font-family: 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
+    color: rgb(0, 111, 175);
+}
+
+h1 {
+    text-align: center;
+    font-family: 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
+    color: rgb(0, 111, 175);
+}
+
+h3 {
+    text-align: center;
+    font-family: 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
+    color: rgb(0, 111, 175);
+}
+
+h4 {
+    text-align: center;
+    font-family: 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
+}
+
+h5 {
+    text-align: center;
+    font-family: 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
+    color: rgb(0, 111, 175);
+}
+
+p {
+    font-family: 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
+    ;
+    font-size: 14px;
+    text-align: justify;
+    text-indent: 10px;
+    line-height: 20px;
+    color: rgb(0, 50, 78);
+}
+
 body {
     background-color: white;
     font-family: "Helvetica Neue", "Helvetica", "Arial", "sans-serif";
@@ -72,6 +111,39 @@ body {
     position: relative;
 }
 
+
+/*  Card image */
+
+.card-imagen {
+    position: absolute;
+    top: 1%;
+    right: 20px;
+    /* bottom: 0; */
+    left: 1%;
+}
+
+.material-icons {
+    font-family: 'Material Icons';
+    font-weight: normautoal;
+    font-style: normal;
+    font-size: 34px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -webkit-font-smoothing: antialiased;
+    color: #ff7c7c;
+}
+
+.formNuevoAnimal {
+    box-shadow: 0 14px 20px 4px rgba(0, 0, 0, 0.85);
+}
+
+
+/* 
 footer {
     background-color: #fff;
     border-top: 1px solid #ededed;
@@ -79,4 +151,18 @@ footer {
     position: relative;
     color: #484848;
     text-align: center;
+} */
+
+footer p {
+    background-color: #fff;
+    border-top: 1px solid #ededed;
+    padding: 10px;
+    color: #484848;
+    text-align: center;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+footer .copyright {
+    opacity: .5;
+    line-height: 1.7;
 }
